# pktcore

./: .gitignore  CMakeLists.txt  README.md  build.md  makepkg.sh
.cache/clangd/index/: combiner.cpp.B41D89F9BE0E09A8.idx  header.h.754B0B7A148017D0.idx  header.h.CA192BF33E9930BD.idx  main.cpp.82AA80D230DC31D3.idx  main.cpp.A07A0D5A553EFEBD.idx  pkt_utils.h.AF0F681EB62909FD.idx  splitter.cpp.2CE0E665D1F72D31.idx  splitter.cpp.D95C173F71223DDE.idx  splitter.h.A85DF0846963844E.idx  splitter.h.FC226692EBCA869F.idx
.github/workflows/: build.yml
backup/: index.html  main.js  style.css
gui/: index.html  main.js  package-lock.json  package.json  renderer.js  style.css
include/: combiner.h  explorer.h  filetest  full_header.h  header.h  idtest.cpp  mini_header.h  part_no_1  pkt_utils.h  search.h  splitter.h  test.cpp  test3.cpp
src/: about.md  combiner.cpp  main.cpp  notes.md  splitter.cpp
test/: 6F57646634_0  6F57646634_1  6F57646634_2  6F57646634_3  a.out  ctest.cpp  stest.cpp
